--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1524,26 +1524,28 @@ header
 .header_dropdown-ul-li
 .header_dropdown-ul-li-link
 */
-body {
-  background-color: black;
-}
-
 body header {
   background-color: #030303;
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
-  height: 3rem;
-  overflow: hidden;
+  height: 3.25rem;
   z-index: 1010;
   -webkit-transition: all 0.4s;
   transition: all 0.4s;
 }
 
+@media (max-width: 1200px) {
+  body header {
+    overflow: hidden;
+  }
+}
+
 body.active {
   overflow: hidden;
   height: 100vh;
+  background-color: black;
 }
 
 body.active header {
