--- a/src/css/main.css
+++ b/src/css/main.css
@@ -2659,11 +2659,14 @@ footer {
 @media (max-width: 992px) {
   .home-sec2-container-display-button {
     margin: auto;
+    width: 100%;
   }
 }
 
 .home-sec2-container-display-button button {
   width: 100%;
+  margin-top: 0.5rem;
+  margin-bottom: 1.5rem;
   background-color: transparent;
   border: 0.0625rem solid #b68b69;
   overflow: hidden;
@@ -2673,8 +2676,14 @@ footer {
   padding: 0.5rem 1.5rem;
   border-radius: 0.25rem;
   display: inline-block;
-  margin-top: 0.5rem;
-  margin-bottom: 1.5rem;
+}
+
+@media (max-width: 992px) {
+  .home-sec2-container-display-button button {
+    margin-left: auto;
+    margin-right: auto;
+    width: 10rem;
+  }
 }
 
 .home-sec2-container-display-button button::after {
@@ -2707,8 +2716,47 @@ footer {
   right: 0;
 }
 
-.home-sec2-container-display-button img {
-  width: 100%;
+.home-sec2-container-display-button-logo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-left: -0.25rem;
+  margin-right: -0.25rem;
+}
+
+@media (max-width: 992px) {
+  .home-sec2-container-display-button-logo {
+    width: 100%;
+    margin: auto;
+    text-align: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
+@media (max-width: 576px) {
+  .home-sec2-container-display-button-logo {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
+.home-sec2-container-display-button-logo img {
+  height: 5.5rem;
+  margin-left: 0.25rem;
+  margin-right: 0.25rem;
+}
+
+@media (max-width: 576px) {
+  .home-sec2-container-display-button-logo img {
+    display: none;
+  }
 }
 
 .home-sec3 {
