--- a/src/scss/page/_about.scss
+++ b/src/scss/page/_about.scss
@@ -133,6 +133,10 @@ $size-xs: 0.6;
         padding-bottom: 2.25rem;
         background-color: #e5e3ea;
         overflow: hidden;
+        @include media-min($lg){
+            padding-top: 2.25rem;
+            padding-bottom: 1.75rem;
+        }
         &#{-text}{
             max-width: 25rem;
             width: 90%;
