--- a/src/scss/page/_design.scss
+++ b/src/scss/page/_design.scss
@@ -143,7 +143,7 @@
     }
 
     .slick-dots{
-        bottom: 4rem;;
+        bottom: 3rem;
         li{
             width: 1rem;
             height: 1rem;
@@ -230,7 +230,7 @@
             }
             &#{-row}{
                 @include row;
-                @include mx(-1rem);
+                @include mx(-15px);
                 &#{-col}{
                     @include col(50%);
                     @include media-max($lg) {
