--- a/src/scss/page/_about.scss
+++ b/src/scss/page/_about.scss
@@ -540,7 +540,7 @@ $size-xs: 0.6;
                 display: flex;
                 flex-direction: column;
                 justify-content: flex-end;
-                padding: 3rem 0;
+                padding: 3rem 0 0 0;
                 .year{
                     padding: 1rem 1.5rem;
                     a{
